Fix layout on tablet size

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ section {
 
 section h2 {
     font-size: 3.375rem;
-    margin-left: 100px;
 }
 
 section ul {
@@ -54,7 +53,7 @@ section ul {
 
 figure {
     padding: 0;
-    margin: 0;
+    margin: 0 0 0.5rem 0;
     border: 5px solid var(--color8);
     border-radius: 5px;
 }
@@ -82,8 +81,7 @@ figcaption a:hover {
     #popart ul {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(5, auto);
-        gap: 4rem;
+        gap: 24px;
     }
 
     .colspan2 {
@@ -97,14 +95,10 @@ figcaption a:hover {
     .rowspan2 {
         grid-row: span 2;
     }
-}
 
-@media (min-width: 800px) {}
-
-#popart ul {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 2rem;
+    figure {
+        height: 100%;
+    }
 }
 
 figure {
@@ -116,6 +110,7 @@ figure {
 figure img {
     grid-column: 1/2;
     grid-row: 1/3;
+    height: 100%;
 }
 
 figure figcaption {
